# Simple-Expense-Tracker

expense-tracker/: Cargo.toml  package-lock.json  package.json
expense-tracker/backend/: .env  Cargo.toml  expense_tracker.db
expense-tracker/backend/src/: main.rs  models.rs  routes.rs
expense-tracker/frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
expense-tracker/frontend/src/: main.rs
expense-tracker/frontend/src/components/: chart.rs  expense_form.rs  expense_list.rs  mod.rs  search_bar.rs  summary_view.rs
