[package]
name = "expense-tracker"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "backend",
  "frontend"
]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["HtmlInputElement", "HtmlSelectElement"] }