[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4"] }
validator = "0.16"
validator_derive = "0.16"
chrono = { version = "0.4", features = ["serde"] }