[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"] }
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.7.1"
uuid = "1.17.0"
dotenvy = "0.15"
chrono = "0.4.41"
serde_json = "1.0.140"
validator = "0.20.0"
validator_derive = "0.20.0"
